--- a/index.html
+++ b/index.html
@@ -3,75 +3,150 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Boulangerie — À REMPLACER</title>
+<title>Boulangerie Nom Ici</title>
 <link rel="stylesheet" href="style.css">
+<style>
+body, html { margin:0; padding:0; font-family:'Inter',sans-serif; background:#faf7f2; color:#2b2b2b; }
+a { text-decoration:none; color:inherit; }
+.hero { display:flex; flex-direction:column; align-items:center; justify-content:center; text-align:center; padding:100px 20px; background:#c89f65; color:white; }
+#logo { width:120px; border-radius:50%; margin-bottom:20px; box-shadow:0 6px 16px rgba(0,0,0,0.4); }
+.menu-btn { position:fixed; top:20px; left:20px; z-index:1000; background:#c89f65; color:white; border:none; padding:12px 18px; border-radius:6px; font-weight:bold; cursor:pointer; }
+.menu { position:fixed; top:0; left:-250px; width:250px; height:100%; background:white; box-shadow:2px 0 12px rgba(0,0,0,0.2); transition:0.3s; padding-top:60px; display:flex; flex-direction:column; }
+.menu a { padding:15px 20px; border-bottom:1px solid #e5e1db; color:#2b2b2b; font-weight:600; }
+.menu.open { left:0; }
+.section { max-width:1100px; margin:70px auto; padding:0 20px; }
+.section h2 { text-align:center; color:#c89f65; font-size:2rem; margin-bottom:30px; }
+.produits { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:25px; }
+.carte-produit { background:white; border-radius:12px; box-shadow:0 4px 14px rgba(0,0,0,0.1); padding:15px; text-align:center; transition:0.3s; }
+.carte-produit:hover { transform:translateY(-6px); box-shadow:0 6px 20px rgba(0,0,0,0.12); }
+.carte-produit img { width:100%; height:160px; object-fit:cover; border-radius:10px; margin-bottom:10px; }
+.carte-produit h3 { color:#c89f65; margin:10px 0 5px; }
+.carte-produit p { font-size:0.95rem; line-height:1.4; }
+.prix { font-weight:700; color:#a47f4f; font-size:1.2rem; display:block; margin-top:8px; }
+form { display:flex; flex-direction:column; gap:12px; max-width:500px; margin:auto; }
+form input, form textarea { padding:10px; border-radius:6px; border:1px solid #ccc; font-size:1rem; }
+form button { padding:12px; background:#c89f65; color:white; font-weight:bold; border:none; border-radius:6px; cursor:pointer; }
+form button:hover { background:#a47f4f; }
+.whatsapp { position:fixed; bottom:25px; right:25px; background:#25d366; padding:14px 22px; border-radius:40px; color:white; font-weight:bold; box-shadow:0 4px 20px rgba(0,0,0,0.3); }
+footer { text-align:center; padding:30px; background:#e5e1db; font-weight:600; margin-top:50px; }
+</style>
 </head>
 <body>
 
-<header class="fade-in">
+<!-- Header -->
+<header class="hero">
+  <div class="hero-content">
     <img id="logo" src="images/logo.jpg" alt="Logo">
-    <h1>Boulangerie — À REMPLACER</h1>
-    <p>Pains · Viennoiseries · Pâtisseries · À REMPLACER</p>
+    <h1>Nom de la Boulangerie Ici</h1>
+    <p>Slogan ou courte description ici</p>
+    <p>Adresse : À compléter</p>
+  </div>
 </header>
 
-<nav>
-    <a href="#galerie">Galerie</a>
-    <a href="#pains">Pains</a>
-    <a href="#viennoiseries">Viennoiseries</a>
-    <a href="#patisseries">Pâtisseries</a>
-    <a href="#commande">Commande</a>
+<!-- Menu Burger -->
+<button class="menu-btn" onclick="toggleMenu()">Menu</button>
+<nav class="menu" id="menu">
+  <a href="#pains">Pains</a>
+  <a href="#viennoiseries">Viennoiseries</a>
+  <a href="#patisseries">Pâtisseries</a>
+  <a href="#boissons">Boissons</a>
+  <a href="#traiteur">Traiteur</a>
+  <a href="#horaires">Horaires</a>
+  <a href="#commande">Commander</a>
+  <a href="#infos">Informations</a>
 </nav>
 
-<section id="galerie" class="section fade-in">
-    <h2>Galerie photos</h2>
-    <div class="galerie">
-        <img src="images/image1.jpg" alt="">
-        <img src="images/image2.jpg" alt="">
-        <img src="images/image3.jpg" alt="">
-        <img src="images/image4.jpg" alt="">
+<!-- Sections Produits -->
+<section id="pains" class="section">
+  <h2>Pains</h2>
+  <div class="produits">
+    <div class="carte-produit">
+      <img src="images/pain1.jpg" alt="Nom du pain 1">
+      <h3>Nom du pain 1</h3>
+      <p>Description du pain 1…</p>
+      <span class="prix">Prix ici</span>
     </div>
+    <div class="carte-produit">
+      <img src="images/pain2.jpg" alt="Nom du pain 2">
+      <h3>Nom du pain 2</h3>
+      <p>Description du pain 2…</p>
+      <span class="prix">Prix ici</span>
+    </div>
+  </div>
 </section>
 
-<section id="pains" class="section fade-in">
-    <h2>Pains</h2>
-    <div class="produits">
-        <div class="carte">Pain 1 – À REMPLACER</div>
-        <div class="carte">Pain 2 – À REMPLACER</div>
-        <div class="carte">Pain 3 – À REMPLACER</div>
+<section id="viennoiseries" class="section">
+  <h2>Viennoiseries</h2>
+  <div class="produits">
+    <div class="carte-produit">
+      <img src="images/croissant.jpg" alt="Nom du produit">
+      <h3>Nom du produit</h3>
+      <p>Description…</p>
+      <span class="prix">Prix ici</span>
     </div>
+  </div>
 </section>
 
-<section id="viennoiseries" class="section fade-in">
-    <h2>Viennoiseries</h2>
-    <div class="produits">
-        <div class="carte">Croissant – À REMPLACER</div>
-        <div class="carte">Pain au chocolat – À REMPLACER</div>
-        <div class="carte">Brioche – À REMPLACER</div>
+<section id="patisseries" class="section">
+  <h2>Pâtisseries</h2>
+  <div class="produits">
+    <div class="carte-produit">
+      <img src="images/eclair.jpg" alt="Nom du produit">
+      <h3>Nom du produit</h3>
+      <p>Description…</p>
+      <span class="prix">Prix ici</span>
     </div>
+  </div>
 </section>
 
-<section id="patisseries" class="section fade-in">
-    <h2>Pâtisseries</h2>
-    <div class="produits">
-        <div class="carte">Éclair – À REMPLACER</div>
-        <div class="carte">Tartelette – À REMPLACER</div>
-        <div class="carte">Gâteau – À REMPLACER</div>
+<section id="boissons" class="section">
+  <h2>Boissons</h2>
+  <div class="produits">
+    <div class="carte-produit">
+      <h3>Nom du produit</h3>
+      <span class="prix">Prix ici</span>
     </div>
+  </div>
 </section>
 
-<section id="commande" class="section fade-in">
-    <h2>Passer une commande</h2>
-    <form>
-        <input type="text" placeholder="Votre nom" required>
-        <input type="text" placeholder="Votre numéro" required>
-        <textarea placeholder="Votre commande (pains, quantités...)" required></textarea>
-        <button type="submit">Envoyer</button>
-    </form>
+<section id="traiteur" class="section">
+  <h2>Traiteur</h2>
+  <p>Description du service traiteur…</p>
+</section>
+
+<!-- Horaires (à compléter toi-même) -->
+<section id="horaires" class="section">
+  <h2>Horaires</h2>
+  <p>À compléter…</p>
+</section>
+
+<!-- Formulaire Commande -->
+<section id="commande" class="section">
+  <h2>Passer une commande</h2>
+  <form>
+    <input type="text" placeholder="Votre nom" required>
+    <input type="text" placeholder="Votre numéro" required>
+    <textarea placeholder="Votre commande (produits, quantités…)" required></textarea>
+    <button type="submit">Envoyer</button>
+  </form>
+</section>
+
+<!-- Informations -->
+<section id="infos" class="section">
+  <h2>Informations</h2>
+  <p>Adresse : À compléter<br>Téléphone : À compléter<br>Email : À compléter</p>
 </section>
 
 <a class="whatsapp" href="https://wa.me/NUMERO" target="_blank">Commander sur WhatsApp</a>
 
-<footer>© 2025 — Boulangerie À REMPLACER</footer>
+<footer>© 2025 — Nom de la Boulangerie</footer>
+
+<script>
+function toggleMenu(){
+  document.getElementById('menu').classList.toggle('open');
+}
+</script>
 
 </body>
 </html>
+
