--- a/index.html
+++ b/index.html
@@ -3,109 +3,69 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Boulangerie Nom Ici</title>
-<link rel="stylesheet" href="style.css">
+<title>Nom de la Boulangerie</title>
 <style>
 :root {
-    --accent: #c89f65;
-    --accent-dark: #a47f4f;
-    --fond: #faf7f2;
-    --texte: #2b2b2b;
-    --gris: #e5e1db;
+    --accent:#c89f65;
+    --accent-dark:#a47f4f;
+    --fond:#faf7f2;
+    --texte:#2b2b2b;
+    --gris:#e5e1db;
 }
 
 /* ======= Base ======= */
-body { margin:0; font-family:'Inter',sans-serif; background:var(--fond); color:var(--texte); scroll-behavior:smooth; }
-a { text-decoration:none; color:inherit; }
+body{margin:0;font-family:'Inter',sans-serif;background:var(--fond);color:var(--texte);scroll-behavior:smooth;}
+a{text-decoration:none;color:inherit;}
 
 /* ======= Header minimal ======= */
-.hero {
+.hero{
     background:linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("images/banner.jpg") center/cover no-repeat;
-    padding:120px 20px;
-    text-align:center;
-    color:white;
+    padding:120px 20px;text-align:center;color:white;
 }
-#logo { width:120px; border-radius:50%; margin-bottom:20px; box-shadow:0 6px 16px rgba(0,0,0,0.4); }
+#logo{width:120px;border-radius:50%;margin-bottom:20px;box-shadow:0 6px 16px rgba(0,0,0,0.4);}
 
 /* ======= Hamburger ======= */
-.hamburger {
-    position:fixed;
-    top:20px;
-    left:20px;
-    z-index:1000;
-    width:30px;
-    height:22px;
-    display:flex;
-    flex-direction:column;
-    justify-content:space-between;
-    cursor:pointer;
+.hamburger{
+    position:fixed;top:20px;left:20px;z-index:1000;width:30px;height:22px;display:flex;flex-direction:column;justify-content:space-between;cursor:pointer;
 }
-.hamburger div {
-    height:4px;
-    background:var(--accent);
-    border-radius:2px;
-    transition:0.3s;
-}
+.hamburger div{height:4px;background:var(--accent);border-radius:2px;transition:0.3s;}
 
 /* ======= Menu coulissant ======= */
-.menu {
-    position:fixed;
-    top:0;
-    left:-260px;
-    width:260px;
-    height:100%;
-    background:white;
-    box-shadow:2px 0 12px rgba(0,0,0,0.2);
-    transition:0.4s;
-    padding-top:60px;
-    display:flex;
-    flex-direction:column;
+.menu{
+    position:fixed;top:0;left:-260px;width:260px;height:100%;background:white;
+    box-shadow:2px 0 12px rgba(0,0,0,0.2);transition:0.4s;padding-top:60px;display:flex;flex-direction:column;
 }
-.menu a {
-    padding:15px 20px;
-    border-bottom:1px solid var(--gris);
-    color:var(--texte);
-    font-weight:600;
-    transition:0.3s;
+.menu a{
+    padding:15px 20px;border-bottom:1px solid var(--gris);color:var(--texte);font-weight:600;transition:0.3s;
 }
-.menu a:hover { color:var(--accent); }
-.menu.open { left:0; }
+.menu a:hover{color:var(--accent);}
+.menu.open{left:0;}
 
 /* ======= Sections ======= */
-.section { max-width:1100px; margin:70px auto; padding:0 20px; }
-.section h2 { text-align:center; color:var(--accent); font-size:2.3rem; margin-bottom:40px; }
+.section{max-width:1100px;margin:70px auto;padding:0 20px;display:none;}
+.section h2{text-align:center;color:var(--accent);font-size:2.3rem;margin-bottom:40px;}
 
 /* ======= Produits cartes ======= */
-.produits { display:grid; grid-template-columns:repeat(auto-fit,minmax(260px,1fr)); gap:30px; }
-.carte-produit {
-    padding:20px;
-    background:white;
-    border-radius:14px;
-    box-shadow:0 4px 14px rgba(0,0,0,0.1);
-    transition:0.4s;
-    text-align:center;
-}
-.carte-produit:hover { transform:translateY(-8px) scale(1.02); box-shadow:0 8px 24px rgba(0,0,0,0.15); }
-.carte-produit img { width:100%; border-radius:14px; height:170px; object-fit:cover; margin-bottom:10px; }
-.carte-produit h3 { margin:10px 0 5px; color:var(--accent); }
-.carte-produit p { font-size:1rem; line-height:1.5; }
-.prix { display:inline-block; margin-top:10px; font-weight:700; color:var(--accent-dark); font-size:1.2rem; }
+.produits{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:30px;}
+.carte-produit{padding:20px;background:white;border-radius:14px;box-shadow:0 4px 14px rgba(0,0,0,0.1);transition:0.4s;text-align:center;}
+.carte-produit:hover{transform:translateY(-8px) scale(1.02);box-shadow:0 8px 24px rgba(0,0,0,0.15);}
+.carte-produit img{width:100%;border-radius:14px;height:170px;object-fit:cover;margin-bottom:10px;}
+.carte-produit h3{margin:10px 0 5px;color:var(--accent);}
+.carte-produit p{font-size:1rem;line-height:1.5;}
+.prix{display:inline-block;margin-top:10px;font-weight:700;color:var(--accent-dark);font-size:1.2rem;}
 
 /* ======= Formulaire ======= */
-form { display:flex; flex-direction:column; gap:12px; max-width:500px; margin:auto; }
-form input, form textarea { padding:10px; border-radius:6px; border:1px solid #ccc; font-size:1rem; }
-form button { padding:12px; background:var(--accent); color:white; font-weight:bold; border:none; border-radius:6px; cursor:pointer; transition:0.3s; }
-form button:hover { background:var(--accent-dark); }
+form{display:flex;flex-direction:column;gap:12px;max-width:500px;margin:auto;}
+form input, form textarea{padding:10px;border-radius:6px;border:1px solid #ccc;font-size:1rem;}
+form button{padding:12px;background:var(--accent);color:white;font-weight:bold;border:none;border-radius:6px;cursor:pointer;transition:0.3s;}
+form button:hover{background:var(--accent-dark);}
 
 /* ======= WhatsApp ======= */
-.whatsapp { position:fixed; bottom:25px; right:25px; background:#25d366; padding:14px 22px; border-radius:40px; color:white; font-weight:bold; box-shadow:0 4px 20px rgba(0,0,0,0.3); }
-.whatsapp:hover { transform:scale(1.08); }
+.whatsapp{position:fixed;bottom:25px;right:25px;background:#25d366;padding:14px 22px;border-radius:40px;color:white;font-weight:bold;box-shadow:0 4px 20px rgba(0,0,0,0.3);}
+.whatsapp:hover{transform:scale(1.08);}
 
 /* ======= Footer ======= */
-footer { text-align:center; padding:40px; background:var(--gris); font-weight:600; margin-top:60px; }
-
-/* ======= Responsive ======= */
-@media(max-width:600px){ .hero { padding:80px 10px; } .produits { grid-template-columns:1fr; } }
+footer{text-align:center;padding:40px;background:var(--gris);font-weight:600;margin-top:60px;}
 </style>
 </head>
 <body>
@@ -118,7 +78,7 @@ footer { text-align:center; padding:40px; background:var(--gris); font-weight:60
     <p>Adresse : À compléter</p>
 </header>
 
-<!-- Hamburger avec 3 barres -->
+<!-- Hamburger -->
 <div class="hamburger" onclick="toggleMenu()">
     <div></div>
     <div></div>
@@ -127,17 +87,17 @@ footer { text-align:center; padding:40px; background:var(--gris); font-weight:60
 
 <!-- Menu coulissant -->
 <nav class="menu" id="menu">
-  <a href="#pains">Pains</a>
-  <a href="#viennoiseries">Viennoiseries</a>
-  <a href="#patisseries">Pâtisseries</a>
-  <a href="#boissons">Boissons</a>
-  <a href="#traiteur">Traiteur</a>
-  <a href="#horaires">Horaires</a>
-  <a href="#commande">Commander</a>
-  <a href="#infos">Informations</a>
+  <a href="#pains" onclick="showSection('pains')">Pains</a>
+  <a href="#viennoiseries" onclick="showSection('viennoiseries')">Viennoiseries</a>
+  <a href="#patisseries" onclick="showSection('patisseries')">Pâtisseries</a>
+  <a href="#boissons" onclick="showSection('boissons')">Boissons</a>
+  <a href="#traiteur" onclick="showSection('traiteur')">Traiteur</a>
+  <a href="#horaires" onclick="showSection('horaires')">Horaires</a>
+  <a href="#commande" onclick="showSection('commande')">Commander</a>
+  <a href="#infos" onclick="showSection('infos')">Informations</a>
 </nav>
 
-<!-- Sections (zones à compléter) -->
+<!-- Sections (cachées au départ) -->
 <section id="pains" class="section">
   <h2>Pains</h2>
   <div class="produits">
@@ -146,6 +106,18 @@ footer { text-align:center; padding:40px; background:var(--gris); font-weight:60
       <h3>Nom du pain</h3>
       <p>Description du pain…</p>
       <span class="prix">Prix ici</span>
+    </div>
+  </div>
+</section>
+
+<section id="viennoiseries" class="section">
+  <h2>Viennoiseries</h2>
+  <div class="produits">
+    <div class="carte-produit">
+      <img src="images/croissant.jpg" alt="Croissant">
+      <h3>Croissant</h3>
+      <p>Description…</p>
+      <span class="prix">Prix</span>
     </div>
   </div>
 </section>
@@ -173,9 +145,15 @@ footer { text-align:center; padding:40px; background:var(--gris); font-weight:60
 function toggleMenu(){
     document.getElementById('menu').classList.toggle('open');
 }
+function showSection(id){
+    document.querySelectorAll('.section').forEach(s => s.style.display='none');
+    document.getElementById(id).style.display='block';
+    document.getElementById('menu').classList.remove('open');
+}
 </script>
 
 </body>
 </html>
+
 
 
