--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Boulangerie — À REMPLACER</title>
+<title>Boulangerie DAISY HOUSE</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,9 +11,18 @@
 <!-- Header principal -->
 <div class="hero fade-in">
     <img id="logo" src="images/logo.jpg" alt="Logo">
-    <h1>Boulangerie À REMPLACER</h1>
-    <p>Slogan ou petite description ici</p>
-    <p>Adresse / Téléphone / Email ou autres infos</p>
+    <h1>Boulangerie DAISY HOUSE</h1>
+    <p class="slogan">Goûtez la passion du fait maison.</p>
+    <p class="description">
+        Des pains croustillants, des viennoiseries dorées et des pâtisseries irrésistibles… 
+        chaque jour, notre boulangerie transforme les ingrédients frais en petites merveilles à savourer. 
+        Bienvenue chez Daisy House ! Plus qu’une boulangerie, une expérience !
+    </p>
+    <div class="infos">
+        <p class="adresse">Adresse : 231 Jard. de l'Arche, 92000 Nanterre</p>
+        <p class="telephone">Téléphone : [À remplir]</p>
+        <p class="email">Email : [À remplir]</p>
+    </div>
 </div>
 
 <!-- Hamburger + Menu -->
