--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 <section id="information" class="section fade-in">
     <h2>Informations</h2>
-    <p>Adresse : ...</p>
+    <p>Adresse : 231 Jard. de l'Arche, 92000 Nanterre</p>
     <p>Téléphone : ...</p>
     <p>Email : ...</p>
     <p>Autres informations utiles : ...</p>
@@ -139,7 +139,7 @@
 
 <!-- Footer -->
 <footer>
-    © 2025 — Boulangerie À REMPLACER
+    © 2025 — Boulangerie Daisy House 
 </footer>
 
 <script src="script.js"></script>
