--- a/index.html
+++ b/index.html
@@ -110,10 +110,39 @@
         </div>
     </div>
 </section>
-
-<section id="horaire" class="section fade-in">
+    
+    <section id="horaire" class="section fade-in">
     <h2>Horaires</h2>
-    <p>Remplis tes horaires ici</p>
+    <div class="horaires-card">
+        <div class="jour">
+            <span>Lundi</span>
+            <span>06:00 – 20:00</span>
+        </div>
+        <div class="jour">
+            <span>Mardi</span>
+            <span>06:00 – 20:00</span>
+        </div>
+        <div class="jour">
+            <span>Mercredi</span>
+            <span>06:00 – 20:00</span>
+        </div>
+        <div class="jour">
+            <span>Jeudi</span>
+            <span>06:00 – 20:00</span>
+        </div>
+        <div class="jour">
+            <span>Vendredi</span>
+            <span>06:00 – 20:00</span>
+        </div>
+        <div class="jour">
+            <span>Samedi</span>
+            <span>06:00 – 20:00</span>
+        </div>
+        <div class="jour">
+            <span>Dimanche</span>
+            <span>Fermé</span>
+        </div>
+    </div>
 </section>
 
 <section id="commande" class="section fade-in">
