--- a/index.html
+++ b/index.html
@@ -111,39 +111,19 @@
     </div>
 </section>
     
-    <section id="horaire" class="section fade-in">
+ <section id="horaire" class="section fade-in">
     <h2>Horaires</h2>
-    <div class="horaires-card">
-        <div class="jour">
-            <span>Lundi</span>
-            <span>06:00 – 20:00</span>
-        </div>
-        <div class="jour">
-            <span>Mardi</span>
-            <span>06:00 – 20:00</span>
-        </div>
-        <div class="jour">
-            <span>Mercredi</span>
-            <span>06:00 – 20:00</span>
-        </div>
-        <div class="jour">
-            <span>Jeudi</span>
-            <span>06:00 – 20:00</span>
-        </div>
-        <div class="jour">
-            <span>Vendredi</span>
-            <span>06:00 – 20:00</span>
-        </div>
-        <div class="jour">
-            <span>Samedi</span>
-            <span>06:00 – 20:00</span>
-        </div>
-        <div class="jour">
-            <span>Dimanche</span>
-            <span>Fermé</span>
-        </div>
-    </div>
+    <table class="horaire-table">
+        <tr><td>🕒 Lundi</td><td>06:00 – 20:00</td></tr>
+        <tr><td>🕒 Mardi</td><td>06:00 – 20:00</td></tr>
+        <tr><td>🕒 Mercredi</td><td>06:00 – 20:00</td></tr>
+        <tr><td>🕒 Jeudi</td><td>06:00 – 20:00</td></tr>
+        <tr><td>🕒 Vendredi</td><td>06:00 – 20:00</td></tr>
+        <tr><td>🕒 Samedi</td><td>06:00 – 20:00</td></tr>
+        <tr><td>🕒 Dimanche</td><td>Fermé</td></tr>
+    </table>
 </section>
+
 
 <section id="commande" class="section fade-in">
     <h2>Passer une commande</h2>
