--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
         <tr><td>🕒 Mercredi</td><td>06:00 – 20:00</td></tr>
         <tr><td>🕒 Jeudi</td><td>06:00 – 20:00</td></tr>
         <tr><td>🕒 Vendredi</td><td>06:00 – 20:00</td></tr>
-        <tr><td>🕒 Samedi</td><td>06:00 – 20:00</td></tr>
-        <tr><td>🕒 Dimanche</td><td>Fermé</td></tr>
+        <tr><td>🕒 Samedi</td><td>06:00 – 00:00</td></tr>
+        <tr><td>🕒 Dimanche</td><td>06:00 – 20:00</td></tr>
     </table>
 
     
