--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 
     
     <p class="horaire-note">
-        Venez savourer nos pains croustillants et viennoiseries dorées tous les jours. 
-        Chaque matin, notre boulangerie vous accueille avec le meilleur du fait maison !
+        Venez savourer nos pains croustillants et nos viennoiseries dorées chaque jour. 
+        Chaque matin, notre boulangerie vous accueille avec le meilleur du fait maison !
     </p>
 </section>
 
