--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Boulangerie DAISY HOUSE</title>
+<meta name="description" content="Découvrez la Boulangerie DAISY HOUSE : pains croustillants, viennoiseries dorées et pâtisseries irrésistibles chaque jour !">
+
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
