--- a/index.html
+++ b/index.html
@@ -68,13 +68,72 @@
 <section id="viennoiseries" class="section fade-in">
     <h2>Viennoiseries</h2>
     <div class="produits">
-        <div class="carte-produit">
-            <img src="images/croissant.jpg" alt="Croissant">
-            <h3>Croissant</h3>
-            <p>Description à remplir</p>
-            <span class="prix">Prix €</span>
-        </div>
+
+    <div class="carte-produit">
+        <img src="images/oranais.jpg" alt="Oranais">
+        <h3>Oranais</h3>
+        <p>Description à remplir</p>
+        <span class="prix">Prix €</span>
     </div>
+
+    <div class="carte-produit">
+        <img src="images/torsade.jpg" alt="Torsade">
+        <h3>Torsade</h3>
+        <p>Description à remplir</p>
+        <span class="prix">Prix €</span>
+    </div>
+
+    <div class="carte-produit">
+        <img src="images/petit_beignet.jpg" alt="Petit beignet fourré">
+        <h3>Petit beignet fourré</h3>
+        <p>Description à remplir</p>
+        <span class="prix">Prix €</span>
+    </div>
+
+    <div class="carte-produit">
+        <img src="images/mini_pain_suisse.jpg" alt="Mini pain suisse">
+        <h3>Mini pain suisse</h3>
+        <p>Description à remplir</p>
+        <span class="prix">Prix €</span>
+    </div>
+
+    <div class="carte-produit">
+        <img src="images/pain_chocolat.jpg" alt="Pain au chocolat">
+        <h3>Pain au chocolat</h3>
+        <p>Description à remplir</p>
+        <span class="prix">Prix €</span>
+    </div>
+
+    <div class="carte-produit">
+        <img src="images/croissant.jpg" alt="Croissant">
+        <h3>Croissant</h3>
+        <p>Description à remplir</p>
+        <span class="prix">Prix €</span>
+    </div>
+
+    <div class="carte-produit">
+        <img src="images/croissant_bicolore.jpg" alt="Croissant bicolore">
+        <h3>Croissant bicolore</h3>
+        <p>Description à remplir</p>
+        <span class="prix">Prix €</span>
+    </div>
+
+    <div class="carte-produit">
+        <img src="images/croissant_choco_creme.jpg" alt="Croissant chocolat crème">
+        <h3>Croissant chocolat à la crème</h3>
+        <p>Description à remplir</p>
+        <span class="prix">Prix €</span>
+    </div>
+
+    <div class="carte-produit">
+        <img src="images/croissant_choco_simple.jpg" alt="Croissant chocolat simple">
+        <h3>Croissant chocolat (simple)</h3>
+        <p>Description à remplir</p>
+        <span class="prix">Prix €</span>
+    </div>
+
+</div>
+
 </section>
 
 <section id="patisseries" class="section fade-in">
