--- a/index.html
+++ b/index.html
@@ -69,72 +69,74 @@
     <h2>Viennoiseries</h2>
     <div class="produits">
 
-    <div class="carte-produit">
-        <img src="images/oranais.jpg" alt="Oranais">
-        <h3>Oranais</h3>
-        <p>Description à remplir</p>
-        <span class="prix">Prix €</span>
+        <div class="carte-produit">
+            <img src="images/oranais.jpg" alt="Oranais">
+            <h3>🍫 Oranais</h3>
+            <p>Viennoiserie délicate fourrée au chocolat et recouverte d’un glaçage fondant.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/torsade.jpg" alt="Torsade">
+            <h3>🥐 Torsade</h3>
+            <p>Pâte feuilletée torsadée, légère et croustillante, parfaite pour un petit-déjeuner gourmand.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/petit-beignet-foure.jpg" alt="Petit beignet fourré">
+            <h3>🍩 Petit beignet fourré</h3>
+            <p>Beignet moelleux garni d’une délicieuse crème ou confiture.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/mini-pain-suisse.jpg" alt="Mini pain suisse">
+            <h3>🥐 Mini pain suisse</h3>
+            <p>Pain suisse léger garni de chocolat fondant.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/pain-au-chocolat.jpg" alt="Pain au chocolat">
+            <h3>🍫 Pain au chocolat</h3>
+            <p>Classique et fondant, un incontournable du petit-déjeuner.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/croissant.jpg" alt="Croissant">
+            <h3>🥐 Croissant</h3>
+            <p>Croustillant à l’extérieur et moelleux à l’intérieur, tout simplement parfait.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/croissant-bicolore.jpg" alt="Croissant bicolore">
+            <h3>🍫✨ Croissant bicolore chocolat-crème</h3>
+            <p>Croissant garni d’une crème chocolat onctueuse et visuellement gourmand.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/chausson-aux-pommes.jpg" alt="Chausson aux pommes">
+            <h3>🍏 Chausson aux pommes</h3>
+            <p>Feuilleté doré fourré de pommes fondantes légèrement caramélisées.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <!-- Chocquette -->
+        <div class="carte-produit">
+            <img src="images/chocquette.jpg" alt="Chocquette">
+            <h3>🍪 Chocquette</h3>
+            <p>Petit délice feuilleté au chocolat, croustillant et fondant.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+
     </div>
-
-    <div class="carte-produit">
-        <img src="images/torsade.jpg" alt="Torsade">
-        <h3>Torsade</h3>
-        <p>Description à remplir</p>
-        <span class="prix">Prix €</span>
-    </div>
-
-    <div class="carte-produit">
-        <img src="images/petit_beignet.jpg" alt="Petit beignet fourré">
-        <h3>Petit beignet fourré</h3>
-        <p>Description à remplir</p>
-        <span class="prix">Prix €</span>
-    </div>
-
-    <div class="carte-produit">
-        <img src="images/mini_pain_suisse.jpg" alt="Mini pain suisse">
-        <h3>Mini pain suisse</h3>
-        <p>Description à remplir</p>
-        <span class="prix">Prix €</span>
-    </div>
-
-    <div class="carte-produit">
-        <img src="images/pain_chocolat.jpg" alt="Pain au chocolat">
-        <h3>Pain au chocolat</h3>
-        <p>Description à remplir</p>
-        <span class="prix">Prix €</span>
-    </div>
-
-    <div class="carte-produit">
-        <img src="images/croissant.jpg" alt="Croissant">
-        <h3>Croissant</h3>
-        <p>Description à remplir</p>
-        <span class="prix">Prix €</span>
-    </div>
-
-    <div class="carte-produit">
-        <img src="images/croissant_bicolore.jpg" alt="Croissant bicolore">
-        <h3>Croissant bicolore</h3>
-        <p>Description à remplir</p>
-        <span class="prix">Prix €</span>
-    </div>
-
-    <div class="carte-produit">
-        <img src="images/croissant_choco_creme.jpg" alt="Croissant chocolat crème">
-        <h3>Croissant chocolat à la crème</h3>
-        <p>Description à remplir</p>
-        <span class="prix">Prix €</span>
-    </div>
-
-    <div class="carte-produit">
-        <img src="images/croissant_choco_simple.jpg" alt="Croissant chocolat simple">
-        <h3>Croissant chocolat (simple)</h3>
-        <p>Description à remplir</p>
-        <span class="prix">Prix €</span>
-    </div>
-
-</div>
-
 </section>
+
 
 <section id="patisseries" class="section fade-in">
     <h2>Pâtisseries</h2>
