--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
         <div class="carte-produit">
             <img src="images/croissant.jpg" alt="Croissant">
-            <h3>🥐 Croissant</h3>
+            <h3>🥐 Croissant au beurre </h3>
             <p>Croustillant à l’extérieur et moelleux à l’intérieur, tout simplement parfait.</p>
             <span class="prix">Prix €</span>
         </div>
