--- a/index.html
+++ b/index.html
@@ -141,14 +141,244 @@
 <section id="patisseries" class="section fade-in">
     <h2>Pâtisseries</h2>
     <div class="produits">
+
         <div class="carte-produit">
-            <img src="images/eclair.jpg" alt="Éclair">
-            <h3>Éclair</h3>
-            <p>Description à remplir</p>
+            <img src="images/trompleuille.jpg" alt="Trompe-l'œil">
+            <h3>🎨 Trompe-l'œil</h3>
+            <p>Une pâtisserie illusion visuelle, surprenante et délicieuse.</p>
             <span class="prix">Prix €</span>
         </div>
+
+        <div class="carte-produit">
+            <img src="images/mange-grenade.jpg" alt="Mange grenade">
+            <h3>🍒 Mange grenade</h3>
+            <p>Pâtisserie fruitée et acidulée avec de délicates notes de grenade.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/kaki.jpg" alt="Kaki">
+            <h3>🍂 Kaki</h3>
+            <p>Douceur fruitée à base de kaki, légère et raffinée.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/citron.jpg" alt="Citron">
+            <h3>🍋 Citron</h3>
+            <p>Tarte au citron onctueuse avec un léger croustillant sur le dessus.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/cacoette-pistache.jpg" alt="Cacoette pistache">
+            <h3>🌿 Cacoette pistache</h3>
+            <p>Pâtisserie délicate à la pistache, fondante et gourmande.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <!-- Tartes classiques -->
+        <div class="carte-produit">
+            <img src="images/tarte-chocolat-caramel.jpg" alt="Tarte chocolat caramel">
+            <h3>🍫 Tarte chocolat caramel</h3>
+            <p>Chocolat riche et caramel fondant pour un plaisir intense.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/tarte-chocolat-praline.jpg" alt="Tarte chocolat praline">
+            <h3>🍫 Tarte chocolat praline</h3>
+            <p>Une association gourmande de chocolat et de praliné croquant.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/tarte-pistache.jpg" alt="Tarte pistache">
+            <h3>🌿 Tarte pistache</h3>
+            <p>Délicieux équilibre entre pâte croustillante et crème pistache.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/tarte-pommes.jpg" alt="Tarte aux pommes">
+            <h3>🍏 Tarte aux pommes</h3>
+            <p>Pommes fondantes légèrement caramélisées sur une pâte dorée.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/tarte-abricots-pistache.jpg" alt="Tarte abricots pistache">
+            <h3>🍑 Tarte abricots pistache</h3>
+            <p>Abricots juteux et pistache pour une tarte fruitée et gourmande.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/amande-chocolat.jpg" alt="Amande chocolat">
+            <h3>🍫 Amande chocolat</h3>
+            <p>Pâtisserie raffinée associant amandes croquantes et chocolat fondant.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/tarte-fraise-framboise.jpg" alt="Tarte fraise framboise">
+            <h3>🍓 Tarte fraise framboise</h3>
+            <p>Fruits frais et crème légère pour une tarte estivale et colorée.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <!-- Pâtisseries variées -->
+        <div class="carte-produit">
+            <img src="images/africana.jpg" alt="Pâtisserie Africana">
+            <h3>🌍 Pâtisserie Africana</h3>
+            <p>Saveurs exotiques pour un voyage gourmand unique.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/casse-noisette.jpg" alt="Casse Noisette">
+            <h3>🌰 Casse Noisette</h3>
+            <p>Noisettes croquantes et crème onctueuse pour un plaisir gourmand.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/parisienne.jpg" alt="Parisienne">
+            <h3>🥖 Parisienne</h3>
+            <p>Classique de la pâtisserie française, élégante et raffinée.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/nougatine.jpg" alt="Nougatine">
+            <h3>🍬 Nougatine</h3>
+            <p>Une douceur croquante au caramel et aux amandes grillées.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/fraisier.jpg" alt="Fraisier">
+            <h3>🍓 Fraisier</h3>
+            <p>Gâteau frais à base de fraises et crème légère, classique incontournable.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/tiramisseau.jpg" alt="Tiramissu">
+            <h3>☕ Tiramissu</h3>
+            <p>Délice italien à base de café et mascarpone, onctueux et gourmand.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/speculos.jpg" alt="Éclair Speculos">
+            <h3>🍪 Éclair Speculos</h3>
+            <p>Éclair fondant avec crème parfumée aux speculos, gourmand et unique.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/caffe-chocolat-vanille.jpg" alt="Éclair café chocolat vanille">
+            <h3>☕🍫 Éclair café chocolat vanille</h3>
+            <p>Éclair à la crème onctueuse parfumée café, chocolat et vanille.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <!-- Cakes et gourmandises -->
+        <div class="carte-produit">
+            <img src="images/cake-bueno.jpg" alt="Cake Bueno">
+            <h3>🍫 Cake Bueno</h3>
+            <p>Moelleux et gourmand, idéal pour les fans de chocolat.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/cake-kitkat.jpg" alt="Cake KitKat">
+            <h3>🍫 Cake KitKat</h3>
+            <p>Chocolat croquant et moelleux réunis dans un cake irrésistible.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/cake-oreo.jpg" alt="Cake Oreo">
+            <h3>🍪 Cake Oreo</h3>
+            <p>Délice chocolaté avec morceaux d’Oreo pour un goût unique.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/cake-red.jpg" alt="Cake Red">
+            <h3>❤️ Cake Red</h3>
+            <p>Gâteau moelleux et coloré, parfait pour les occasions spéciales.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/cake-rafaelo.jpg" alt="Cake Rafaelo">
+            <h3>🥥 Cake Rafaelo</h3>
+            <p>Moelleux au chocolat blanc et noix de coco, irrésistible.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/cheesecake-speculos.jpg" alt="Cheesecake Speculos">
+            <h3>🍪 Cheesecake Speculos</h3>
+            <p>Cheesecake crémeux sur base croquante de speculos.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/cheesecake-bueno.jpg" alt="Cheesecake Bueno">
+            <h3>🍫 Cheesecake Bueno</h3>
+            <p>Crémeux et chocolaté, un cheesecake pour les vrais gourmands.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/macaron-framboise.jpg" alt="Macaron framboise">
+            <h3>🍓 Macaron framboise</h3>
+            <p>Macaron délicat garni d’une crème framboise intense.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/foret-noire.jpg" alt="Forêt noire">
+            <h3>🍫 Forêt noire</h3>
+            <p>Gâteau classique au chocolat, cerises et crème chantilly.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/fondant-chocolat.jpg" alt="Fondant chocolat">
+            <h3>🍫 Fondant chocolat</h3>
+            <p>Intense et moelleux, pour les amateurs de chocolat pur.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/cookie-nature.jpg" alt="Cookie nature">
+            <h3>🍪 Cookie nature</h3>
+            <p>Cookie moelleux, simple et délicieux.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/cookie-chocolat.jpg" alt="Cookie chocolat">
+            <h3>🍫 Cookie chocolat</h3>
+            <p>Cookie gourmand avec morceaux de chocolat fondant.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
+        <div class="carte-produit">
+            <img src="images/muffin-caramel-chocolat.jpg" alt="Muffin caramel chocolat">
+            <h3>🍫 Muffin caramel chocolat</h3>
+            <p>Muffin moelleux, généreusement garni de caramel et chocolat.</p>
+            <span class="prix">Prix €</span>
+        </div>
+
     </div>
 </section>
+
 
 <section id="boissons" class="section fade-in">
     <h2>Boissons</h2>
